--- a/MaterialDesign/res/layout-land/color_selector.xml
+++ b/MaterialDesign/res/layout-land/color_selector.xml
@@ -10,22 +10,23 @@
     <LinearLayout
         android:id="@+id/contentSelector"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_centerInParent="true"
         android:background="@drawable/dialog_background"
-        android:orientation="vertical" >
+        android:orientation="horizontal" >
 
         <View
             android:id="@+id/viewColor"
-            android:layout_width="fill_parent"
-            android:layout_height="10dp" />
+            android:layout_width="10dp"
+            android:layout_height="fill_parent" />
 
         <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
+            android:gravity="center_vertical"
             android:orientation="vertical"
             android:background="#FFF"
-            android:padding="15dp" >
+            android:padding="16dp" >
 
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -47,8 +48,8 @@
                     android:layout_height="wrap_content"
                     android:background="#4D4D4D"
                     materialdesign:max="255"
-                    materialdesign:min="0"
-                    materialdesign:showNumberIndicator="true" />
+                    materialdesign:showNumberIndicator="true"
+                    materialdesign:min="0" />
             </LinearLayout>
 
             <LinearLayout
@@ -71,8 +72,8 @@
                     android:layout_height="wrap_content"
                     android:background="#4D4D4D"
                     materialdesign:max="255"
-                    materialdesign:min="0"
-                    materialdesign:showNumberIndicator="true" />
+                    materialdesign:showNumberIndicator="true"
+                    materialdesign:min="0" />
             </LinearLayout>
 
             <LinearLayout
@@ -95,14 +96,15 @@
                     android:layout_height="wrap_content"
                     android:background="#4D4D4D"
                     materialdesign:max="255"
-                    materialdesign:min="0"
-                    materialdesign:showNumberIndicator="true" />
+                    materialdesign:showNumberIndicator="true"
+                    materialdesign:min="0" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="center_vertical"
+                android:gravity="center_vertical|right"
+
                 android:orientation="horizontal" >
 
                 <com.gc.materialdesign.views.ButtonFlat
@@ -118,6 +120,7 @@
                     android:layout_height="wrap_content"
                     android:text="OK"/>
             </LinearLayout>
+
         </LinearLayout>
     </LinearLayout>
 
